--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,9 +1,21 @@
 {% extends 'main/base.html' %}
 {% load static  %}
 {% block title %}
-    KazTravel - Homepage
+    KazTravel - AboutUs Page
 {% endblock %}
 
 {% block content %}
-
+<div id="about" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>About Us Page</h2><br>
+      <h4>KazTravel Guide - is a website that helps tourists to plan their trips to Kazakhstan!</h4><br>
+      <p>By Astana IT University students</p>
+      <br><button class="btn btn-default btn-lg">Get in Touch</button>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-signal logo"></span>
+    </div>
+  </div>
+</div>
 {% endblock %}
