Committed 27.04.21 - Tours page updated

--- a/main/templates/main/tours.html
+++ b/main/templates/main/tours.html
@@ -9,7 +9,13 @@
     {% for el in all_tours %}
         <div class="alert alert-warning mt-2">
             <h3>{{ el.title }}</h3>
-            <p>{{ el.desc }}</p>
+            <img src="{{ el.image }}" width="400px">
+            <h5>Type: {{ el.type }}</h5>
+            <p><b>Description:</b> {{ el.desc }}</p>
+            <p><b>Duration:</b> {{ el.duration }}</p>
+            <p><b>Price:</b> {{ el.price }}</p>
+            <p><b>Prices include:</b> {{ el.price_include }}</p>
+            <button type="submit" class="btn btn-success">Add to Cart</button>
         </div>
     {% endfor %}
 {% endblock %}
