--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -27,8 +27,12 @@
       </form>
 
       <div class="text-end">
-          <a href="{% url 'account_login' %}" ><button type="button" class="btn btn-outline-light me-2">Login</button></a>
-        <a href="{% url 'account_signup' %}" ><button type="button" class="btn btn-warning">Sign-up</button></a>
+          {% if user.is_authenticated %}
+            <a href="{% url 'account_logout' %}" ><button type="button" class="btn btn-outline-light me-2">Logout</button></a>
+          {% else %}
+              <a href="{% url 'account_login' %}" ><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+              <a href="{% url 'account_signup' %}" ><button type="button" class="btn btn-warning">Sign-up</button></a>
+          {% endif %}
       </div>
     </div>
   </div>
