Committed 28.04.21 - Front+Back updated version

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -9,7 +9,15 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>About Us Page</h2><br>
-      <h4>KazTravel Guide - is a website that helps tourists to plan their trips to Kazakhstan!</h4><br>
+      <h3>KazTravel Guide - is a website that helps tourists to plan their trips to Kazakhstan!</h3><br>
+      <h3>Auditory</h3>
+      <p>The main auditory of our website will be tourists that plan to visit our country. And our
+        website will help them to find interesting places of Kazakhstan and will help to plan their
+        visit including where they will live, transport and stuff like that. Also, people of Kazakhstan
+        can also use our website to make a tour inside Kazakhstan, because not all people visited all
+        beautiful places of Kazakhstan. So, in general, all people who enjoy travelling and want to
+        know more about our country can visit our website.
+      </p>
       <p>By Astana IT University students</p>
       <br><button class="btn btn-default btn-lg">Get in Touch</button>
     </div>
