--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,14 +1,17 @@
 {% load static %}
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA_Compatible" content="IE=edge">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/city.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-    <header class="p-3 bg-dark text-white">
+    <header class="p-3 text-white hedbg">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -22,16 +25,13 @@
         <li><a href="{% url 'about' %}" class="nav-link px-2 text-white">About</a></li>
       </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-        <input type="search" class="form-control form-control-dark" placeholder="Search...">
-      </form>
-
-      <div class="text-end">
+      <div class="text-end prof">
           {% if user.is_authenticated %}
-            <a href="{% url 'account_logout' %}" ><button type="button" class="btn btn-outline-light me-2">Logout</button></a>
+            <a href="#" ><button type="button" class="mybtn login">{{request.user.username}}</button></a>
+            <a href="{% url 'account_logout' %}" ><button type="button" class="mybtn login">Logout</button></a>
           {% else %}
-              <a href="{% url 'account_login' %}" ><button type="button" class="btn btn-outline-light me-2">Login</button></a>
-              <a href="{% url 'account_signup' %}" ><button type="button" class="btn btn-warning">Sign-up</button></a>
+              <a href="{% url 'account_login' %}" ><button type="button" class="mybtn login">Login</button></a>
+              <a href="{% url 'account_signup' %}" ><button type="button" class="mybtn signup">Sign-up</button></a>
           {% endif %}
       </div>
     </div>
@@ -39,15 +39,14 @@
 </header>
 
     {% block content %}{% endblock %}
-</body>
-
-<footer class="text-muted py-5">
+<footer class="foot">
   <div class="container">
     <p class="float-end mb-1">
-      <a href="#">Kazakh Travel Guide</a>
+        <img src="{% static 'home/images/icons/instagram.svg' %}" alt="">
+        <img src="{% static 'home/images/icons/telegram.svg' %}" alt="">
     </p>
-    <p class="mb-1">Kazakh Travel Guide © Made in Kazakhstan, 2021</p>
-    <p class="mb-0">Astana IT University! <a href="/">Visit the homepage</a> or read our <a href="/docs/5.0/getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Kazakh Travel Guide © All rights reserved, 2021</p>
   </div>
 </footer>
+</body>
 </html>
