--- a/main/templates/main/tours.html
+++ b/main/templates/main/tours.html
@@ -10,8 +10,8 @@
         <div class="alert alert-warning mt-2">
             <h3>{{ el.title }}</h3>
             <img src="{{ el.image }}" style="width: 400px" alt="Image of the city">
-            <h5>Type: {{ el.type }}</h5>
-            <p><b>Description:</b> {{ el.desc }}</p>
+            <p><b>Category:</b> {{ el.category }}</p>
+            <p><b>Description:</b> {{ el.description }}</p>
             <p><b>Duration:</b> {{ el.duration }}</p>
             <p><b>Price:</b> {{ el.price }} $ per person</p>
             <p><b>Prices include:</b> {{ el.price_include }}</p>
