--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -24,6 +24,9 @@
         <li><a href="{% url 'tours' %}" class="nav-link px-2 text-white">Tours</a></li>
         <li><a href="#" class="nav-link px-2 text-white">Plan your trip</a></li>
         <li><a href="{% url 'about' %}" class="nav-link px-2 text-white">About</a></li>
+          {% if user.is_authenticated %}
+              <li><a href="{% url 'mycart' %}" class="nav-link px-2 text-white">Cart</a></li>
+          {% endif %}
       </ul>
 
       <div class="text-end prof">
