Committed 26.05.2021 - Checkout, Profile, Order History added

--- a/main/templates/main/mycart.html
+++ b/main/templates/main/mycart.html
@@ -44,7 +44,7 @@
                     </tr>
                     {% if cart.tourcartproduct_set.all %}
                     <tr>
-                        <th><a class="btn btn-info" href=""> Checkout </a></th>
+                        <th><a class="btn btn-info" href="{% url 'checkout' %}"> Checkout </a></th>
                     </tr>
                     {% endif %}
                 </tbody>
