--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -31,7 +31,7 @@
 
       <div class="text-end prof">
           {% if user.is_authenticated %}
-            <a href="#" ><button type="button" class="mybtn login">{{request.user.username}}</button></a>
+            <a href="{% url 'customerprofile' %}" ><button type="button" class="mybtn login">{{request.user.username}}</button></a>
             <a href="{% url 'account_logout' %}" ><button type="button" class="mybtn login">Logout</button></a>
           {% else %}
               <a href="{% url 'account_login' %}" ><button type="button" class="mybtn login">Login</button></a>
