Committed 01.06.2021 - Customer Order History fixed

--- a/main/templates/main/customerorderdetail.html
+++ b/main/templates/main/customerorderdetail.html
@@ -37,7 +37,7 @@
                     {% endfor %}
                     <tr>
                         <th colspan="4" class="text-right">Total: </th>
-                        <th>Rs {{ord_obj.total|intcomma}}/-</th>
+                        <th>$ {{ord_obj.total|intcomma}}/-</th>
                     </tr>
                 </tbody>
             </table>
