--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'main/css/city.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    {% block language %}{% endblock %}
+<style>{% block style %}{% endblock %}</style>
 </head>
 <body>
     <header class="p-3 text-white hedbg">
@@ -22,7 +24,7 @@
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="{% url 'index' %}" class="nav-link px-2 text-white">Home</a></li>
         <li><a href="{% url 'tours' %}" class="nav-link px-2 text-white">Tours</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Plan your trip</a></li>
+        <li><a href="{% url 'planyourtrip' %}" class="nav-link px-2 text-white">Plan your trip</a></li>
         <li><a href="{% url 'about' %}" class="nav-link px-2 text-white">About</a></li>
           {% if user.is_authenticated %}
               <li><a href="{% url 'mycart' %}" class="nav-link px-2 text-white">Cart</a></li>
