Committed 09.06.2021 - About and Login pages updated

--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -720,7 +720,7 @@ img{
     display: block;
 }
 
-.button {
+.button_about {
   display: inline-block;
   border-radius: 30px;
   background-color: #BC4749;
